# Recommendation-System

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.sh
data/: .gitkeep
embeddings/: .gitkeep
models/: .gitkeep
notebooks/: hybrid_vae_demo.ipynb
src/: config.py  utils.py
src/api/: schemas.py  server.py
src/ml/: baseline.py  evaluate.py  model.py  train.py  tune.py  visualize.py
src/preprocessing/: cleaning.py  dataset.py  embeddings.py
tests/: test_e2e_pipeline.py  test_unit.py
